<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ros2service</name>
  <version>0.11.0</version>
  <description>
    The service command for ROS 2 command line tools.
  </description>
  <maintainer email="mabel@openrobotics.org">Mabel Zhang</maintainer>
  <maintainer email="audrow@openrobotics.org">Audrow Nash</maintainer>
  <license>Apache License 2.0</license>

  <author email="william@osrfoundation.org">William Woodall</author>

  <depend>rclpy</depend>
  <depend>ros2cli</depend>

  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ros_testing</test_depend>
  <test_depend>test_msgs</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
