<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ros2srv</name>
  <version>0.8.6</version>
  <description>
    The srv command for ROS 2 command line tools.
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache License 2.0</license>

  <depend>ros2cli</depend>

  <exec_depend>ament_index_python</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ros_testing</test_depend>
  <test_depend>std_msgs</test_depend>
  <test_depend>std_srvs</test_depend>

  <export>
    <deprecated>
      This package has been replaced by 'ros2interface' and will be removed in a future ROS distro.
    </deprecated>

    <build_type>ament_python</build_type>
  </export>
</package>
